--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -79,7 +79,9 @@ project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
-apply from: "../../node_modules/react-native/react.gradle"
+/*Disalbed by react-native-ota
+  apply from: "../../node_modules/react-native/react.gradle"
+*/
 
 /**
  * Set this to true to create two separate APKs instead of one:
