--- a/example/package.json
+++ b/example/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/runtime": "^7.9.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.59.0"
+  },
+  "react-native-ota": {
+    "appId": "react-native-ota-example",
+    "provider": "http://localhost:3000",
+    "manager": "http://localhost:5000",
+    "passphrase": "r+gKfSQ40CzdiGYVfBjYiKhBxqf0TeqwnrFr0lp8ZNAkAfboDeLVSDlr9KVOCXoCFa8I2vjgyAzWHDN8RYVPRA=="
   }
 }
